--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,6 @@ springVersion=6.1.14
 lombokVersion=1.18.34
 thymeleafVersion=3.1.2.RELEASE
 jakartaServletApiVersion=6.1.0
-jacksonVersion=2.18.0
+apacheVersion=3.17.0
+hamcrestVersion=3.0
+mockitoVersion=5.14.2
